--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -6,21 +6,22 @@
       "flex-layout.row",
       "flex-layout.col",
       "image#electronics",
-      "image#major-appliance"
+      "image#major-appliance",
+      "shelf"
     ]
   },
   "info-card#button-right": {
     "props": {
-    "isFullModeStyle": false,
-    "textPosition": "right",
-    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-    "headline": "Vintage Pink",
-    "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-    "callToActionMode": "button",
-    "callToActionText": "Explore",
-    "callToActionUrl": "/sale/d",
-    "textAlignment": "center",
-    "blockClass": "vintage"
+      "isFullModeStyle": false,
+      "textPosition": "right",
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
+      "headline": "Vintage Pink",
+      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
+      "callToActionMode": "button",
+      "callToActionText": "Explore",
+      "callToActionUrl": "/sale/d",
+      "textAlignment": "center",
+      "blockClass": "vintage"
     }
   },
   "info-card#button-left": {
