--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,7 +7,8 @@
       "flex-layout.col",
       "image#electronics",
       "image#major-appliance",
-      "shelf"
+      "shelf",
+      "slider-layout#home"
     ]
   },
   "info-card#button-right": {
