--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -76,7 +76,7 @@
           ]
     },
 
-    "tab-content.item#1": {
+    "tab-content.item#home1": {
         "children": [
           "rich-text#home1"
         ],
@@ -85,7 +85,7 @@
         }
     },
 
-    "tab-content.item#2": {
+    "tab-content.item#home2": {
         "children": [
             "rich-text#home2"
         ],
