--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -65,7 +65,7 @@
     "tab-list.item#home2": {
         "props": {
             "tabId": "electronics",
-            "label": "Electronics"
+            "label": "Instagram"
         }
     },
 
@@ -87,7 +87,7 @@
 
     "tab-content.item#home2": {
         "children": [
-            "rich-text#home2"
+            "iframe"
         ],
         "props": {
             "tabId": "electronics"
@@ -101,12 +101,12 @@
           "font": "t-heading-3"
         }
     },
-    
-    "rich-text#home2": {
+
+    "iframe": {
         "props": {
-          "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
-          "textPosition": "CENTER",
-          "font": "t-heading-3"
+            "widht": 800,
+            "height": 1000,
+            "src": "https://www.instagram.com/p/B973Qp8BacC/embed"
         }
     }
 
