--- a/store/blocks/about-us.jsonc
+++ b/store/blocks/about-us.jsonc
@@ -105,8 +105,8 @@
     "iframe": {
         "props": {
             "src": "https://www.instagram.com/p/B973Qp8BacC/embed",
-            "widht": "800px",
-            "height": "1000px"
+            "width": 800,
+            "height": 1000
             
         }
     }
