--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -17,12 +17,12 @@
         "props":{
             "querySchema":{
                 "skusFilter": "FIRST_AVAILABLE",
-                "simulationBehavior": "skip"
-            },
-            "name": "Blue Top Retro Camera",
-            "orderByField": "OrderByReleaseDateDESC",
-            "maxItemsPerPage": 8,
-            "hideUnavailableItems": true
+                "simulationBehavior": "skip",
+                "name": "Blue Top Retro Camera",
+                "orderByField": "OrderByReleaseDateDESC",
+                "maxItemsPerPage": 8,
+                "hideUnavailableItems": true
+            }
         }
     }
 }
