--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -18,7 +18,7 @@
             "querySchema":{
                 "orderByField": "OrderByReleaseDateDESC",
                 "maxItemsPerPage": 8,
-                "hideUnavailableItems": true
+                "hideUnavailableItems": false
             }
         }
     }
