--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -14,6 +14,9 @@
     },
 
     "search-result-layout.customQuery#landing": {
+        "children": [
+            "search-result-layout.desktop"
+        ],
         "props":{
             "querySchema":{
                 "orderByField": "OrderByReleaseDateDESC",
@@ -23,5 +26,18 @@
                 "skusFilter": "ft"
             }
         }
+    },
+
+    "search-result-layout.desktop": {
+        "children": [
+            "search-content"
+        ]
+    },
+
+    "search-content": {
+        "children":[
+            "gallery"
+        ]
     }
+    
 }
