--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -14,37 +14,14 @@
     },
 
     "search-result-layout.customQuery#landing": {
-        "children": [
-            "search-result-layout.desktop"
-        ],
         "props":{
             "querySchema":{
                 "orderByField": "OrderByReleaseDateDESC",
                 "maxItemsPerPage": 8,
                 "hideUnavailableItems": false,
-                "facetsBehavior": "static",
-                "skusFilter": "ALL"
+                "query": "Blue Top Retro Camera",
+                "mapField": "ft"
             }
         }
-    },
-
-    "search-result-layout.desktop": {
-        "children": [
-            "search-content"
-        ],
-        "props":{
-            "hiddenFacets": {
-                "specificationFilters": {
-                    "hiddenFilters": "Blue Top Retro Camera"
-                }
-            }
-        }
-    },
-
-    "search-content": {
-        "children":[
-            "gallery"
-        ]
     }
-    
 }
