--- a/store/blocks/search-landing.jsonc
+++ b/store/blocks/search-landing.jsonc
@@ -18,7 +18,7 @@
             "querySchema":{
                 "orderByField": "OrderByReleaseDateDESC",
                 "maxItemsPerPage": 8,
-                "hideUnavailableItems": false,
+                "hideUnavailableItems": true,
                 "query": "Blue Top Retro Camera",
                 "map": "ft"
             }
