--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -1,7 +1,8 @@
 {
     "header": {
         "blocks": [
-          "header.full"
+            "header-layout.desktop",
+            "header-layout.mobile"
         ]
     },
     "header.full": {
